Changed output to use serializer

--- a/hack_upload.routing.yml
+++ b/hack_upload.routing.yml
@@ -1,9 +1,10 @@
 hack_upload.form:
   path: '/hack-upload-form'
   options:
-    _auth: [ 'http_basic' ]
+    _auth: [ 'cookie' ]
   defaults:
     _title: 'This is bad form...'
     _form: 'Drupal\hack_upload\Form\HackUploadForm'
   requirements:
     _permission: 'access content'
+
